	* removd ugly background color from buttons in the docheader

2008-02-05  Oliver Hader  <oh@inpublica.de>

	* (tweak) Followup to #6472: Some small changes to the new hooks
	* !!! (feature) Added feature #7370: Remove page doktypes '2' & '5' ('advanced' & 'not in menu') and merge them with 'normal' doktype '1' (patch by Steffen Kamper) 

2008-02-04 Jeff Segars <jeff@webempoweredchurch.org>

	* Fixed bug #7386: Remove hardcoded references to alt_main.php backend interface

2008-02-04  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix a problem with devLog in user autehtication introduced with fix for #7350
	* !!! Feature #2731: Improved caching of locallang - changed internal caching from default character set of language to required character set.

2008-02-04  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug: htmlArea RTE calling t3lib_div::getUserObj() with an empty string
	* Fixed bug: htmlArea RTE: incorrect configuration of TYPO3HtmlParser plugin

2008-02-04  Benjamin Mack  <mack@xnos.org>

	* Fixed bug #7354: Filelist titles length was fixed to 30 characters, now uses value from user setup (Thanks to Stefano Cecere)

2008-02-04  Michael Stucki  <michael@typo3.org>

	* Fixed bug #7295: sysext/dbal/: Uninitialized variable in ->handler_getFromTableList() (Patch by Oliver Klee)
	* Added feature #2988: Enable EXPLAIN SELECT in TS admin panel

2008-02-04  Oliver Hader  <oh@inpublica.de>

	* (feature) Added feature #5242: IRRE - Storage page for child records
	* (minor) Fixed bug #7029: tslib_cObj uses deprecated function call_user_method
	* (feature) Added feature #6472: IRRE - Possibility to manipulate control items for each child records
	* (minor) Fixed bug #7371: Query generator does not accept dates in where condition
	* (tweak) Followup to #6087: Added missing labels localize.isLocalizable and localize.wasRemovedInOriginal
	* (tweak) Followup to #7350: Fixed type to match with t3lib_div::array_merge_recursive_overrule()
